--- a/style.css
+++ b/style.css
@@ -71,3 +71,9 @@
     padding-left: 1rem;
     padding-right: 1rem;
 }
+
+.footer {
+    background-color: #212529;
+    color: white;
+    padding: 40px 0 20px;
+}
