--- a/style.css
+++ b/style.css
@@ -11,14 +11,14 @@
 }
 
 .navbar-nav .nav-link.active {
-    color: #ffffff;
+    color: #ffffff ;
     background: rgba(255, 255, 255, 0.15);
     font-weight: 600;
 }
 
 
 .navbar-nav .nav-link:hover {
-    color: #ffffff;
+    color: #ffffff ;
     background: rgba(255, 255, 255, 0.1);
     transform: translateY(-1px);
 }
@@ -76,8 +76,15 @@
     background-color: #212529;
     color: white;
     padding: 40px 0 20px;
-}
 
+}
+.card{
+    height: 425px !important;
+}
+.card_img{
+    height: 200px !important;
+
+}
 .about-section {
     background-color: #f8f9fa;
     padding: 80px 0;
